@startuml Task Manager Component Diagram

skinparam component {
    BackgroundColor<<Interface>> LightGray
    BorderColor<<Interface>> Gray
}

package "Delivery Layer" {
    [REST API Handler]
    [GraphQL Handler]
    [gRPC Handler]
}

package "Service Layer" {
    [Task Service]
}

package "Domain Layer" {
    interface "TaskService" as ITaskService <<Interface>>
    interface "TaskRepository" as ITaskRepo <<Interface>>
    interface "TaskValidator" as ITaskValidator <<Interface>>
    interface "TaskNotifier" as ITaskNotifier <<Interface>>
}

package "Repository Layer" {
    [Memory Repository]
}

package "Validator Package" {
    [Task Validator]
    interface "BaseValidator" as IBaseValidator <<Interface>>
    [Validation Rules]
}

' 依賴關係
[REST API Handler] --> ITaskService
[GraphQL Handler] --> ITaskService
[gRPC Handler] --> ITaskService

[Task Service] ..|> ITaskService
[Task Service] --> ITaskRepo
[Task Service] --> ITaskValidator
[Task Service] --> ITaskNotifier

[Memory Repository] ..|> ITaskRepo

[Task Validator] ..|> ITaskValidator
[Task Validator] --> IBaseValidator
[Task Validator] --> [Validation Rules]

@enduml 